leptos-fluent-macros/tests/ui/leptos_fluent/stable/fail/invalid_type.stderr
error[E0308]: mismatched types
  --> tests/ui/leptos_fluent/stable/fail/invalid_type.rs:15:5
   |
15 | /     leptos_fluent! {
16 | |         children: children(),
17 | |         translations: [TRANSLATIONS],
18 | |         locales: "../../../../examples/csr-minimal/locales",
19 | |         url_param,
20 | |         initial_language_from_url_param: true,
21 | |     }
   | |     ^
   | |     |
   | |_____expected `&str`, found integer
   |       arguments to this function are incorrect
   |
note: function defined here
  --> $WORKSPACE/leptos-fluent/src/url.rs
   |
   |     pub fn get(k: &str) -> Option<String> {
   |            ^^^
   = note: this error originates in the macro `leptos_fluent` (in Nightly builds, run with -Z macro-backtrace for more info)
